# cad-automation-system

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  STATUS.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
specs/: BLUEPRINT.yaml
src/cad_automation/: __init__.py
src/cad_automation/templates/: __init__.py  base.py  mounting_bracket.py
src/cad_automation/validators/: __init__.py  base.py  dimensioning.py  sheet_layout.py
tests/unit/templates/: __init__.py  test_mounting_bracket.py
tests/unit/validators/: __init__.py  test_base.py  test_dimensioning.py  test_sheet_layout.py
